--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-        <title>Coloring Book</title>
+        <title>Freehand Drawing Board</title>
+        <link rel="stylesheet" href="style.css" media="screen" />
         <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://kit.fontawesome.com/3c5b30085d.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    
+        <div id="container">
+        </div>
+        <script src="./script.js"></script>
 </body>
+
 </html>
